# C-projects_Krenevych

./: CMakeLists.txt
Homeworks/: CMakeLists.txt
Homeworks/HW01/: t1_11.cpp  t1_15.cpp
Homeworks/HW02/: t2_14.cpp  t2_17g.cpp
Homeworks/HW03/: t3_15.cpp  t3_23b.cpp
Homeworks/HW04/: t4_12a.cpp  t4_24.cpp
Homeworks/HW05/: t6_09.cpp  t6_14.cpp
Homeworks/HW06/: t5_11b.cpp  t5_16i.cpp
Homeworks/HW07/: t08_v.cpp  t17.cpp
Lab_01/: hello.cpp  t04.cpp  t06.cpp  t1_01.cpp  t1_02.cpp  t1_03.cpp  t1_04.cpp  t1_05.cpp  t1_06.cpp  t1_07.cpp  t1_08.cpp  t1_09.cpp
Lab_02/: t2_01.cpp  t2_02.cpp  t2_03.cpp  t2_04b.cpp  t2_05.cpp  t2_06.cpp
Lab_03/: t01.cpp
Lab_04/: t01.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp  t06.cpp  t07.cpp  t08.cpp  t09.cpp  t10.cpp  t11.cpp  t12.cpp
Lab_05/: t01.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp  t07.cpp  t08.cpp
Lab_06/: t01-7.cpp
Lab_07/: t01-05.cpp  t06.cpp  t08_1.cpp
Lab_08/: t01.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp  t06.cpp  t07.cpp
Lab_09/: t01.cpp  t02.cpp  t03.cpp  t04.cpp
Lab_10/: CMakeLists.txt  chess.c  chess.h  date.c  date.h  polynome.c  polynome.h  rectangle.c  rectangle.h  t01.c
Lab_10_p2/: CMakeLists.txt  Rational.c  Rational.h  test_rational.c
Lab_10_p3/: CMakeLists.txt  Mounts.c  Mounts.h  test_mount.c
Lab_11/: CMakeLists.txt  file_work.c  file_work.h  task1.c
Lab_11_t02/: CMakeLists.txt  F.txt  functions.c  functions.h  t02.c
Lab_11_t04/: CMakeLists.txt  rectangles.c  rectangles.h  rectangles.txt  t04.c
Lab_11_task3/: CMakeLists.txt  file_work.c  file_work.h  task1.c
Lab_11_task5/: CMakeLists.txt  polynome.c  polynome.h  task11_5.c
Lab_12/: input.txt  t01.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp
Lab_13/: CMakeLists.txt  func.cpp  func.h  t01.cpp  t02.cpp  t03.cpp  t06.cpp
Lab_14/: data.txt  input2.txt  output2.txt  students_data.txt  t01.cpp  t02.cpp  t03.cpp  t04.cpp  t05.cpp  tags_test.txt
Lab_15/: CMakeLists.txt  Dot.h  Rational.cpp  Rational.h  t01.cpp  t02.cpp  t03.cpp
Lab_16/: t01.cpp
Lab_17/: CMakeLists.txt  Rational.cpp  Rational.h  t01.cpp
Lab_17_task2/: t17_02.cpp
SeaBattle-2_Task/: CMakeLists.txt  main.cpp  test_Board.cpp  test_RandomBot_class.cpp  test_SmartBot.cpp  test_human_class.cpp
SeaBattle-2_Task/include/: Board.h  Config.h  Game.h  HumanPlayer.h  Player.h  RandomBot.h  SmartBot.h
SeaBattle-2_Task/src/: Board.cpp  Game.cpp  RandomBot.cpp  SmartBot.cpp
(+31 files in other folders)
