cmake_minimum_required(VERSION 4.0)
project(C-projects_Krenevych)

set(CMAKE_CXX_STANDARD 20)

# Додаємо підпроекти
add_subdirectory(Lab_10)
add_subdirectory(Lab_10_p2)
add_subdirectory(Lab_10_p3)
add_subdirectory(Lab_11_task5)
add_subdirectory(Homeworks)
add_subdirectory(Lab_15)
add_subdirectory(Lab_11)
add_subdirectory(Lab_11_t02)
add_subdirectory(Lab_11_task3)
add_subdirectory(Lab_11_t04)
add_subdirectory(Lab_13)